test/corpus/statements.txt
; ===================
; Comment
; ===================

; # Comment
; Ontology: #Comment
; # Comment

; ---

; (source_file (ontology_document
; 	(ontology)))

===================
Full IRI
===================

Ontology: <http://www.semanticweb.org/janek/ontologies/2023/9/untitled-ontology-3> 

---

(source_file (ontology_document
	(ontology (iri (full_iri)))))

===================
Prefix Declaration
===================

Prefix: owl: <http://www.w3.org/2002/07/owl#>
Prefix: rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>

Ontology:

---

(source_file (ontology_document
	(prefix_declaration (prefix_name) (full_iri))
	(prefix_declaration (prefix_name) (full_iri))
	(ontology)))


===================
Literal String
===================

Ontology:
	Class: Person
	Annotations: comment "General domain"

---

(source_file
  (ontology_document
    (ontology
      (frame
        (class_frame
          (iri
            (simple_iri))
          (annotation_annotated_list
            (annotation
              (iri
                (simple_iri))
              (annotation_target
                (literal)))))))))

===================
Datatype Frame integer
===================

Ontology:
	Datatype: integer

---

(source_file (ontology_document
	(ontology
		(frame 
			(datatype_frame 
				(datatype))))))


===================
Datatype Frame IRI
===================

Ontology:
	Datatype: NegInt

---

(source_file (ontology_document
	(ontology
		(frame 
			(datatype_frame 
				(datatype
					(iri
						(simple_iri))))))))

===================
Datatype Frame Annotations
===================

Ontology:
	Datatype: 
		integer
		Annotations: creator God

---

(source_file (ontology_document
	(ontology
		(frame 
			(datatype_frame 
				(datatype)
				(annotation_annotated_list
          (annotation
            (iri
              (simple_iri))
            (annotation_target
              (iri
                (simple_iri))))))))))

===================
Datatype Frame EquivalentTo
===================

Ontology:
	Datatype: NegInt
		EquivalentTo:
			Annotations: creator God
			integer[< 0]

---

(source_file (ontology_document
	(ontology
		(frame 
			(datatype_frame 
				(datatype (iri (simple_iri)))
        (annotations
          (annotation_annotated_list (annotation
						(iri (simple_iri))
            (annotation_target (iri (simple_iri))))))
          (data_range
            (data_conjunction (data_primary (data_atomic
                  (datatype_restriction
                    (datatype)
                    (facet)
                    (literal)))))))))))

===================
Datatype Frame EquivalentTo Complex
===================

Ontology:
	Datatype: NegInt
		EquivalentTo:
			Annotations: creator God
			integer[< 0] or float and string[length 8]

---

(source_file
      (ontology_document
        (ontology
          (frame
            (datatype_frame
              (datatype
                (iri
                  (simple_iri)))
              (annotations
                (annotation_annotated_list
                  (annotation
                    (iri
                      (simple_iri))
                    (annotation_target
                      (iri
                        (simple_iri))))))
              (data_range
                (data_conjunction
                  (data_primary
                    (data_atomic
                      (datatype_restriction
                        (datatype)
                        (facet)
                        (literal)))))
                (data_conjunction
                  (data_primary
                    (data_atomic
                      (datatype)))
                  (data_primary
                    (data_atomic
                      (datatype_restriction
                        (datatype)
                        (facet)
		                    (literal)))))))))))

===================
Class Frame IRI
===================

Ontology:
	Class: Person

---

(source_file (ontology_document
	(ontology
		(frame 
			(class_frame 
				(iri
					(simple_iri)))))))

===================
Class Frame SubClassOf
===================

Ontology:
	Class: Person
		SubClassOf: owl:Thing

---

(source_file (ontology_document
	(ontology
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction (primary (atomic
							(iri (abbreviated_iri))))))))))))

===================
Class Frame SubClassOf with List
===================

Ontology:
	Class: Person
		SubClassOf:
			owl:Thing,Human

---

(source_file (ontology_document
	(ontology
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction (primary (atomic
							(iri (abbreviated_iri))))))

					(description
						(conjunction (primary (atomic
							(iri (simple_iri))))))))))))

===================
Class Frame SubClassOf with Annotations
===================

Ontology:
	Class: Person
		SubClassOf:
			owl:Thing,
				Annotations: creator God
			Human

---

(source_file (ontology_document
	(ontology
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction (primary (atomic
							(iri (abbreviated_iri))))))

					(annotations (annotation_annotated_list 
						(annotation 
							(iri (simple_iri))
							(annotation_target (iri (simple_iri))))))
					(description
						(conjunction (primary (atomic
							(iri (simple_iri))))))))))))


===================
Class Frame SubClassOf with Conjunction
===================

Ontology:
	Class: Person
		SubClassOf: hasAge exactly 1 and hasAge only not NegInt

---

(source_file (ontology_document
	(ontology
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction 
							(primary (restriction 
								(data_property_expression (iri (simple_iri)))
								(non_negative_integer)))
							(primary (restriction 
								(data_property_expression (iri (simple_iri)))
								(primary (atomic (iri (simple_iri))))))))))))))



===================
Class Frame Complex
===================

Ontology:
  Class: Person
    Annotations: foo bar
    SubClassOf: owl:Thing that hasFirstName exactly 1 and hasFirstName only string[minLength 1]  
    SubClassOf: hasAge exactly 1 and hasAge only not NegInt
    SubClassOf: hasGender exactly 1 and hasGender only {female , male} 
    SubClassOf: hasSSN max 1, hasSSN min 1
    SubClassOf: not hates Self
    EquivalentTo: g:People
    DisjointWith: g:Rock , g:Mineral 
    DisjointUnionOf: Annotations: foo bar Child, Adult
    HasKey: Annotations: foo bar hasSSN

---



===================
Object Property
===================

Ontology:
	  ObjectProperty: hasWife
---

(source_file
      (ontology_document
        (ontology
          (frame
            (object_property_frame
              (iri
                (simple_iri)))))))

===================
Object Property Annotations
===================

Ontology:
	  ObjectProperty: hasWife
	    Annotations: creator God
---

(source_file
      (ontology_document
        (ontology
          (frame
            (object_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri))))))))))

===================
Object Property Domain
===================

Ontology:
	  ObjectProperty: hasWife
	    Domain: Person, Man
---
(source_file
  (ontology_document
    (ontology
      (frame
        (object_property_frame
          (iri
            (simple_iri))
          (description_annotated_list
            (description
              (conjunction
                (primary
                  (atomic
                    (iri
                      (simple_iri))))))
            (description
              (conjunction
                (primary
                  (atomic
                    (iri
                      (simple_iri))))))))))))

===================
Object Property Characteristics
===================

Ontology:
	  ObjectProperty: hasWife
			Characteristics: Functional, InverseFunctional, Reflexive, Irreflexive, Asymmetric, Transitive
---

(source_file
  (ontology_document
    (ontology
      (frame
        (object_property_frame
          (iri
            (simple_iri))
          (object_property_characteristic_annotated_list
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)))))))

===================
Object Property Complex
===================

Ontology:
	  ObjectProperty: hasWife
	    Annotations: creator God
			Characteristics: Functional, InverseFunctional, Reflexive, Irreflexive, Asymmetric, Transitive
	    Domain: Annotations: rdfs:comment "General domain",
	                         creator John
	              Person,
	            Annotations: rdfs:comment "More specific domain"
	              Man
	    Range: Person, Woman
	    SubPropertyOf: hasSpouse, loves
	    EquivalentTo: isMarriedTo , andOther
	    DisjointWith: hates , andOther
	    InverseOf: hasSpouse, inverse hasSpouse
	    SubPropertyChain: Annotations: foo bar hasChild o hasParent o hasOther
---

(source_file
      (ontology_document
        (ontology
          (frame
            (object_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (object_property_characteristic_annotated_list
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic))
              (description_annotated_list
                (annotations
                  (annotation_annotated_list
                    (annotation
                      (iri
                        (abbreviated_iri))
                      (annotation_target
                        (literal)))
                    (annotation
                      (iri
                        (simple_iri))
                      (annotation_target
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (annotations
                  (annotation_annotated_list
                    (annotation
                      (iri
                        (abbreviated_iri))
                      (annotation_target
                        (literal)))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (description_annotated_list
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (inverse_object_property
                    (iri
                      (simple_iri)))))
              (annotations
                (annotation_annotated_list
                  (annotation
                    (iri
                      (simple_iri))
                    (annotation_target
                      (iri
                        (simple_iri))))))
              (object_property_expression
                (iri
                  (simple_iri)))
              (object_property_expression
                (iri
                  (simple_iri)))
              (object_property_expression
                (iri
                  (simple_iri))))))))

===================
Data Property Complex
===================

Ontology:
  DataProperty: hasAge
    Annotations: foo Bar
    Characteristics: Annotations: foo bar Functional
    Domain: Person, Foo
    Range: integer , float
    SubPropertyOf: hasVerifiedAge , hasOther
    EquivalentTo: hasAgeInYears ,hasOther
    DisjointWith: hasSSN ,hasOther

---

(source_file
      (ontology_document
        (ontology
          (frame
            (data_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (annotations
                (annotation_annotated_list
                  (annotation
                    (iri
                      (simple_iri))
                    (annotation_target
                      (iri
                        (simple_iri))))))
              (description_annotated_list
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (data_range_annotated_list
                (data_range
                  (data_conjunction
                    (data_primary
                      (data_atomic
                        (datatype)))))
                (data_range
                  (data_conjunction
                    (data_primary
                      (data_atomic
                        (datatype))))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri)))))))))


===================
Annotation Property Complex
===================

Ontology:
  AnnotationProperty: creator
    Annotations: foo bar
    Domain: Person , Other
    Range: integer , float
    SubPropertyOf: initialCreator , other

---

(source_file
      (ontology_document
        (ontology
          (frame
            (annotation_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri)))
              (iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri)))
              (annotation_property_iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri))))))))

===================
Individual Complex
===================

Ontology:
  Individual: John
    Annotations: foo bar
    Types: Person , hasFirstName value "John" or hasFirstName value "Jack"^^xsd:string
    Facts: hasWife Mary, not hasChild Susan, hasAge 33, hasChild _:child1
    SameAs: Jack , John2
    DifferentFrom: Susan ,Susan2
---
